--- a/home.html
+++ b/home.html
@@ -1,2 +1,13 @@
-zsdfsdsdfsdf
-fuck it word1sdfsdfsfsd
+<!DOCTYPE html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width">
+        <title>repl.it</title>
+        <link href="/style.css" rel="stylesheet" type="text/css" />
+    </head>
+    <body>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+    </body>
+</html>
