--- a/home.html
+++ b/home.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-        <title>repl.it</title>
-        <link href="/style.css" rel="stylesheet" type="text/css" />
+        <title>csslayout</title>
+        <link href="style.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
         <div class="box"></div>
